force-app/main/default/objects/Trip_Activity__c/Trip_Activity__c.object-meta.xml
<CustomObject>
    <label>Trip Activity</label>
    <nameField>
        <label>Activity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>