force-app/main/default/objects/Trip_Activity__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <formula>IF(WEEKDAY(Date__c) == 1, &apos;Sunday&apos;,
IF(WEEKDAY(Date__c) == 2, &apos;Monday&apos;,
IF(WEEKDAY(Date__c) == 3, &apos;Tuesday&apos;,
IF(WEEKDAY(Date__c) == 4, &apos;Wednesday&apos;,
IF(WEEKDAY(Date__c) == 5, &apos;Thursday&apos;,
IF(WEEKDAY(Date__c) == 6, &apos;Friday&apos;,
IF(WEEKDAY(Date__c) == 7, &apos;Saturday&apos;, &apos;Unknown&apos;
)))))))</formula>
    <label>Day</label>
    <type>Text</type>
</CustomField>