force-app/main/default/objects/Trip_Activity__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <label>Duration (Hours)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>