force-app/main/default/objects/Trip_Activity__c/fields/End_Address__c.field-meta.xml
<CustomField>
    <fullName>End_Address__c</fullName>
    <label>End Address</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>