force-app/main/default/objects/Trip_Activity__c/fields/End_Location__c.field-meta.xml
<CustomField>
    <fullName>End_Location__c</fullName>
    <label>End Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>