force-app/main/default/objects/Trip_Activity__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <inlineHelpText>Flight Number</inlineHelpText>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>