force-app/main/default/objects/Trip_Activity__c/fields/Start_Address__c.field-meta.xml
<CustomField>
    <fullName>Start_Address__c</fullName>
    <label>Start Address</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>