force-app/main/default/objects/Trip_Activity__c/fields/Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Location__c</fullName>
    <label>Start Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>