force-app/main/default/objects/Trip_Activity__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Trip Activities</relationshipLabel>
    <relationshipName>Trip_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>